<resources>
    <string name="app_name">LMS</string>
    <string-array name="titles">
        <item>Title</item>
        <item>Timing</item>
        <item>Questions</item>
    </string-array>
    <string name="next">Next</string>
    <string name="dates_and_schedule">dates and schedule</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_a_code_to_you_on_your_email">We will send a code to you on your Email</string>
    <string name="enter_your_email_to_reset_your_password">Enter Your email to reset your password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_verification">Email verification</string>
    <string name="we_have_sent_a_code_to_your_email_please_n_write_it_correctly_to_recover_your_password">We have sent a code to your email, please \n write it correctly to recover your password</string>
    <string name="the_code_will_expire_after_3_21">The code will expire after 3:21</string>
    <string name="new_password">New Password</string>
    <string name="from_your_classroom_enter_the_new_password">From your classroom, enter the new password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="submit">Submit</string>
    <string name="successfully_verified">Successfully verified</string>
    <string name="your_email_has_been_successfully_verified_n_and_you_can_now_begin_your_user_n_experience">Your email has been successfully verified \n and you can now begin your user\n experience</string>
    <string name="start">Start</string>
    <string name="mohamed">Mohamed</string>
    <string name="fourth_year">fourth year</string>
    <string name="hi">Hi,</string>
    <string name="department">Department</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="edit_account">Edit Account</string>
    <string name="show_your_card">Show Card</string>
    <string name="fcai_sadat_city_university">FCAI-Sadat City University</string>
    <string name="your_name">Your Name :</string>
    <string name="your_level">Your Level :</string>
    <string name="academic_id">Academic ID : </string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="done">Done</string>
    <string name="quizzes">Quizzes</string>
    <string name="points">points</string>
    <string name="answers_have_been_sent_successfully">Answers have been sent successfully</string>
    <string name="finished">Finished !</string>
    <string name="you_are_a_superb_warrior">You are a superb warrior!</string>
    <string name="done_100_task_month">Done 100 task month</string>
    <string name="done_10_task_yesterday">Done 10 task yesterday</string>
    <string name="done_4_task_today">Done 4 task today</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="upload_assignment">Upload Assignment</string>
    <string name="attach">Attach</string>
    <string name="final_exam">Final Exam</string>
    <string name="practical_exam">Practical Exam</string>
    <string name="midterm_exam">Midterm Exam</string>
    <string name="quiz2">Quiz2</string>
    <string name="quiz1">Quiz1</string>
    <string name="exams">Exams</string>
    <string name="grades">Grades</string>
    <string name="access_materials_easy">Access Materials easy</string>
    <string name="courses_tasks_quizzes_n_and_calendar">Courses, tasks , quizzes \n and Calendar</string>
    <string name="events_and_news">Events and News</string>
    <string name="timeline_contain_posts_about_n_tasks_and_news">Timeline contain posts about \n tasks and News</string>
    <string name="last_lectures_labs_and_n_assignments">Last lectures, labs and \n assignments</string>
    <string name="access_materials_offline">Access Materials offline</string>
    <string name="welcome">Welcome!</string>
    <string name="are_you_sure_to_submit_your_answers">Are you sure to Submit Your Answers ?</string>
    <string name="select_date">Select Date</string>
    <string name="you_can_login_here">You can login here</string>
    <string name="courses">Courses</string>
    <string name="mark">Mark</string>
    <string name="material">Material</string>
    <string name="level">Level</string>
    <string name="semester">Semester</string>
    <string name="add_event">Add Event</string>
    <string name="timeline_n_here">Timeline \n here</string>
    <string name="show_card">Show Card</string>
    <string name="student">Student</string>
    <string name="doctor">Doctor</string>
    <string name="date">Date</string>
    <string name="hours">Hours:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="task_grade">Task Grade</string>
    <string name="task_name">Task Name</string>
    <string name="attach_file">Attach File</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="name_of_task_which_students_can_see_it">name of task which students can see it</string>
    <string name="name_of_quiz_which_students_can_see_it">name of quiz which students can see it</string>
    <string name="back">Back</string>
    <string name="lecture">Lecture</string>
    <string name="lab">Lab</string>
</resources>