<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassword.ResetPasswordFragment2">

    <ImageView
        android:id="@+id/img_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_send_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_rest_password"
        android:layout_marginTop="150dp"
        />
    <TextView
        android:id="@+id/tv_rest_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_send_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_enter_your_email"
        android:text="@string/reset_password"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tv_enter_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_rest_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        android:text="@string/enter_your_email_to_reset_your_password"
        android:textSize="16sp"
        android:textColor="@color/white2"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_your_email"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/btn_next"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_input_background"
        android:hint="@string/email"
        app:endIconDrawable="@drawable/ic_email"
        app:endIconMode="custom"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="10dp"
        android:text="@string/next"
        android:textSize="24sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>