<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassword.ResetPasswordFragment1">

    <ImageView
        android:id="@+id/reset_img"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/reset_img"
        android:adjustViewBounds="true"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_rest"
        />
    <TextView
        android:id="@+id/tv_rest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".06"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/reset_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_we_will_send_code"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_we_will_send_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".04"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_rest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        android:text="@string/we_will_send_a_code_to_you_on_your_email"
        android:textColor="@color/white2"
        android:textStyle="bold"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_we_will_send_code"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="10dp"
        android:text="@string/next"
        />

</androidx.constraintlayout.widget.ConstraintLayout>