<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassword.ResetPasswordFragment5">
    <ImageView
        android:id="@+id/img_send_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintWidth_percent=".6"
        android:src="@drawable/img_send_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_successfully_verified"
        />
    <TextView
        android:id="@+id/tv_successfully_verified"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".06"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_send_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_your_email_has_been_successfully"
        android:text="@string/successfully_verified"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_your_email_has_been_successfully"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".095"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_successfully_verified"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        android:text="@string/your_email_has_been_successfully_verified_n_and_you_can_now_begin_your_user_n_experience"
        android:textColor="@color/white2"
        android:textStyle="bold"

        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_email_has_been_successfully"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        app:cornerRadius="10dp"
        android:text="@string/start"
        />
</androidx.constraintlayout.widget.ConstraintLayout>