<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp"

    tools:context=".ui.doctor.fragments.account.DrAccountFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/avatar_1" />

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <ImageView
        android:id="@+id/img_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="@id/img_profile"
        app:layout_constraintStart_toStartOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_department"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".04"
        android:gravity="center"
        android:text="@string/department"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@id/tv_level"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintTop_toTopOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/tv_department"
        app:layout_constraintEnd_toStartOf="@id/tv_semester"
        app:layout_constraintStart_toEndOf="@id/tv_department"
        app:layout_constraintTop_toTopOf="@id/tv_department" />

    <TextView
        android:id="@+id/tv_semester"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/semester"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/tv_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_level"
        app:layout_constraintTop_toTopOf="@id/tv_level" />

    <TextView
        android:id="@+id/department"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".04"
        android:gravity="center"
        tools:text="CS"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@id/level"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_department"
        app:layout_constraintBottom_toBottomOf="@id/img_profile"
        />

    <TextView
        android:id="@+id/level"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        tools:text="4"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/department"
        app:layout_constraintEnd_toStartOf="@id/semester"
        app:layout_constraintStart_toEndOf="@id/department"
        app:layout_constraintTop_toTopOf="@id/department" />

    <TextView
        android:id="@+id/semester"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        tools:text="2"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/level"
        app:layout_constraintTop_toTopOf="@id/level" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Mohamed Shaban"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintStart_toStartOf="@id/img_profile"
        app:layout_constraintTop_toBottomOf="@id/img_profile" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="id/"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@id/user_id_number"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintStart_toStartOf="@id/user_name"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintWidth_percent=".06" />

    <TextView
        android:id="@+id/user_id_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="123456"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/user_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintStart_toEndOf="@id/user_id"
        app:layout_constraintTop_toTopOf="@id/user_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/show_card"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/gray"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/logout_btn"
        app:layout_constraintHeight_percent=".075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_id_number"
        app:layout_constraintWidth_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/gray"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_show_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".075"
        app:layout_constraintStart_toEndOf="@id/btn_show_card"
        app:layout_constraintTop_toTopOf="@id/btn_show_card"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:drawablePadding="15dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/transparent"
        app:drawableEndCompat="@drawable/ic_path_arrow"
        app:drawableStartCompat="@drawable/ic_password"
        app:layout_constraintBottom_toTopOf="@id/change_phone"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintTop_toBottomOf="@id/btn_show_card" />

    <TextView
        android:id="@+id/change_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="50dp"
        android:drawablePadding="15dp"
        android:text="@string/change_phone"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@color/transparent"
        app:drawableEndCompat="@drawable/ic_path_arrow"
        app:drawableStartCompat="@drawable/ic_phone"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintHeight_percent=".04"
        app:layout_constraintTop_toBottomOf="@id/change_password" />


</androidx.constraintlayout.widget.ConstraintLayout>